[package]
name = "mini-yaml-rs"
version = "0.2.7"
authors = ["Shawn Xiang <xiang.elec@domain.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A minimalist, zero-copy parser for a strict subset of the YAML specification."
readme = "README.md"
repository = "https://github.com/hecmay/mini-yaml-rs.git"
homepage = "https://github.com/hecmay/mini-yaml-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "serde"]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
paste = "0.1.6"
serde = { version = "1.0.104", features = ["derive"] }
wasm-bindgen-test = "0.3"
js-sys = "0.3"

[profile.release]
lto = true
opt-level = "s"
